@@ -37,20 +37,20 @@ Many thanks to:
 <h4><a name="References" id="References"></a>References</h4>
 <div class="text"
 	<ul>
-	<li>Brandes, Ulrik (2001). <i>A Faster Algorithm for Betweeness Centrality.</i> Journal of Mathematical Sociology 25(2), pp.163-177.</li>
-	<li>Brandes, Ulrik (2001). <i>Drawing on Physical Analogies.</i> In M. Kaufmann and D. Wagner (Eds.): Drawing Graphs: Methods and Models. LNCS Tutorial 2025, pp. 71-86. </li>
-	<li>Dasgupta S., Papadimitriou C.H. & Vazirani U.V. (2006). <i>Algorithms.</i></li>
-<li>Erdos, P. and Renyi, A. (1959). <em>On Random Graphs. I.</em> Publicationes Mathematicae 6: 290-297.</li>
-<li>Erdos, P. and Renyi, A. (1960). <em>The Evolution of Random Graphs.</em< Magyar Tud. Akad. Mat. Kutat Int. Kol. 5: 17-61.</li>
+	<li>Brandes, Ulrik (2001). <em>A Faster Algorithm for Betweeness Centrality.</em> Journal of Mathematical Sociology 25(2), pp.163-177.</li>
+	<li>Brandes, Ulrik (2001). <em>Drawing on Physical Analogies.</em> In M. Kaufmann and D. Wagner (Eds.): Drawing Graphs: Methods and Models. LNCS Tutorial 2025, pp. 71-86. </li>
+	<li>Dasgupta S., Papadimitriou C.H. & Vazirani U.V. (2006). <em>Algorithms.</em></li>
+	<li>Erdos, P. and Renyi, A. (1959). <em>On Random Graphs. I.</em> Publicationes Mathematicae 6: 290-297.</li>
+	<li>Erdos, P. and Renyi, A. (1960). <em>The Evolution of Random Graphs.</em< Magyar Tud. Akad. Mat. Kutat Int. Kol. 5: 17-61.</li>
+	<li>Watts, D.J., Strogatz, S.H. (1998). <em>Collective dynamics of 'small-world' networks.</em> Nature 393 (6684): 409–10. </li>
 
-
-	<li>Fruchterman, T.M.J. & Reingold, E.M. (1991). <i>Graph Drawing by Force-Directed Placement.</i>Software-Practice & Experience. Vol. 21, Is. 11, pp. 1129-1164.</li>
-	<li>Liu, C.L. (2000) <i>Elements of Discrete Mathematics 2nd Edition</i>, Greek Translation.</li>
-	<li>Press W., Teukolsky S., Vetterling W. & Flannery B. (1992). <i>Numerical Recipes in C, the art of scientific computing.</i></li>
-	<li>Stroustrup B. (1997). <i>The C++ Programming Language.</i> </li>
-	<li>Scott, J. (2000). <i>Social Network Analysis, A handbook.</i> </li>
-	<li>Trolltech ASA (2008). <i>QtAssistant. Version 4.4 Open Source Edition.</i></li>
-	<li>Wasserman S. & Faust K. (2000). <i>Social Network Analysis. Methods and Applications.</i></li>
+	<li>Fruchterman, T.M.J. & Reingold, E.M. (1991). <em>Graph Drawing by Force-Directed Placement.</em>Software-Practice & Experience. Vol. 21, Is. 11, pp. 1129-1164.</li>
+	<li>Liu, C.L. (2000) <em>Elements of Discrete Mathematics 2nd Edition</em>, Greek Translation.</li>
+	<li>Press W., Teukolsky S., Vetterling W. & Flannery B. (1992). <em>Numerical Recipes in C, the art of scientific computing.</em></li>
+	<li>Stroustrup B. (1997). <em>The C++ Programming Language.</em> </li>
+	<li>Scott, J. (2000). <em>Social Network Analysis, A handbook.</em> </li>
+	<li>Trolltech ASA (2008). <em>QtAssistant. Version 4.4 Open Source Edition.</em></li>
+	<li>Wasserman S., Faust K. (2000). <em>Social Network Analysis. Methods and Applications.</em></li>
 
     </ul>
 </div>
