@@ -8,12 +8,14 @@ ChangeLog:
 Version 0.50 - Feb 10 2009
 Codename: "Recession"
 ------------------------------
+-'Small World' random networks
 -Nodes can be linked to themselves with nice bezier curves.
 -PDF export with one click.
 -Node labels are fully editable.
 -Number and label colors are editable.
 -Fixed number and label font size problem.
 -Fixed PNG and BMP export regression.
+-New program logo and icon!
 -Icon for Windows executable
 -Code cleanup and minor memory optimisations.
 
